Updated by task 'AUTO_TM_MT_1709854871662'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/a9d381b8781a7bb2364cfbeb7c422a91507c5740

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -4,10 +4,10 @@ description: Notas de la versión de Analytics de 2022
 feature: Release Notes
 exl-id: fcf0c735-c070-4c9f-8613-9c7fe5bbde49
 mini-toc-levels: 2
-source-git-commit: 99156dd9d898ce0abf214561cb0040c647d7e6ab
+source-git-commit: 43c39b99cbae3e714b7f017dec14dd02fa350790
 workflow-type: tm+mt
-source-wordcount: '10053'
-ht-degree: 97%
+source-wordcount: '10041'
+ht-degree: 93%
 
 ---
 
@@ -88,7 +88,7 @@ AN-288519; AN-289300; AN-297387; AN-297465; AN-297520; AN-297641; AN-298134; AN-
 | **Actualización de la nueva base de datos de operadores de NetAcuity** | 26 de septiembre de 2022 | Esta actualización, planeada originalmente para el 5 de octubre de 2022, se ha pospuesto para **enero de 2023**. La información relacionada con el operador de telefonía se almacena en el campo `carrier` en Adobe Analytics Data Warehouse y las fuentes de datos de Analytics cambiarán. Históricamente, el formato de datos de esa columna se ha `<domain>:<ISP>`. Adobe ha mantenido una tabla de búsqueda interna para asignar estos valores `<domain>:<ISP>` en nombres de operadores para la creación de informes en las herramientas con este fin de Adobe Analytics (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, etc.). El archivo de búsqueda (`carrier.tsv`) también se proporciona con fuentes de datos para que pueda utilizar las mismas asignaciones.<p>Esta actualización del estado mejora nuestras asignaciones de operadores mediante el uso de una base de datos de operadores más precisa de NetAcuity. El formato de los datos de la columna de operador de las fuentes de datos cambiará en adelante. En lugar de `<domain>:<ISP>`, contendrá un nombre de operador. Adobe seguirá utilizando la tabla de búsqueda para mantener la mayor continuidad posible con los informes anteriores. Herramientas de creación de informes donde Adobe aplica las búsquedas (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, etc.) se beneficiarán de asignaciones más precisas. Algunas asignaciones, especialmente para dominios internacionales e ISP, cambiarán más que otras cuando Adobe adopte la nueva base de datos. El archivo de búsqueda del operador de fuentes de datos (`carrier.tsv`) mantendrá las asignaciones antiguas y agregará las nuevas.<p>El conector de origen de Analytics no asigna actualmente el campo de operador, por lo que los informes de operador no están disponibles actualmente en Experience Platform, Customer Journey Analytics, etc. Por lo tanto, el uso de la nueva base de datos de operadores no afectará a nada en Experience Platform que se base en los datos proporcionados por el Conector de origen de Analytics. |
 | **Asignación de IP a geolocalización mejorada** | 26 de septiembre de 2022 | Nuestro proveedor de búsquedas de IP, Digital Element, está actualizando a un nuevo conjunto de datos mejorado (NetAcuity Pulse) para la asignación de IP a geolocalización. Originalmente planificado para octubre de 2022, Adobe Analytics adoptará este nuevo conjunto de datos en **enero de 2023**. La nueva base de datos será más precisa que las versiones anteriores. Algunas asignaciones de IP a regiones cambiarán o mejorarán cuando se adopte la nueva base de datos.<p>Todas las herramientas de Adobe Analytics (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, fuentes de datos, etc.) aprovechará automáticamente las nuevas asignaciones mejoradas. No habrá cambios en el formato de los datos en las fuentes de datos. Los datos del Customer Journey Analytics proporcionados a través del conector de origen de Analytics también aprovecharán automáticamente las nuevas asignaciones. |
 | **Actualización de SFTP** | 19 de septiembre de 2022 | Anteriormente, Adobe había comunicado que actualizaría sus servicios de Protocolo seguro de transferencia de archivos (SFTP) en septiembre de 2022 para proporcionar una seguridad mejorada para la transferencia de archivos. Adobe realizó esta actualización el **20 de septiembre de 2022**. Cuando se hizo este cambio, dejaron de admitirse determinadas configuraciones del cliente SFTP. Esto solo afecta a los datos enviados o recuperados de Adobe Analytics mediante SFTP. El protocolo FTP no se ve afectado. Para evitar interrupciones en el servicio, asegúrese de que sus clientes SFTP (código, herramientas y servicios) estén de acuerdo con los cambios detallados [aquí](https://experienceleague.adobe.com/docs/analytics/export/ftp-and-sftp/secure-file-transfer-protocol/sftp-upgrade.html?lang=es). |
-| **Cambia el modo en que Analytics gestiona los datos de A4T recopilados mediante Experience Edge** | 14 de septiembre de 2022 | En marzo de 2022, Analytics cambió su forma de gestionar algunas llamadas procedentes de Experience Edge que incluyen datos de A4T. Las visitas con contenido de creación de informes de A4T se han modificado para que no se traten como eventos de vista de páginas (`t()`) o de seguimiento de vínculos (`tl()`). Esta lógica ahora se actualiza para incluir casos en los que los eventos `propositionDisplay` no se modificaban como estaba previsto. |
+| **Cambia el modo en que Analytics gestiona los datos de A4T recopilados mediante Adobe Experience Platform Edge Network** | 14 de septiembre de 2022 | En marzo de 2022, Analytics cambió su forma de gestionar algunas llamadas procedentes de la red perimetral que incluye datos de A4T. Las visitas con contenido de creación de informes de A4T se han modificado para que no se traten como eventos de vista de páginas (`t()`) o de seguimiento de vínculos (`tl()`). Esta lógica ahora se actualiza para incluir casos en los que los eventos `propositionDisplay` no se modificaban como estaba previsto. |
 | **Delimitadores automáticos para variables de lista y props de lista en el SDK web** | 14 de septiembre de 2022 | Las variables de lista y los props de lista ahora emplean los delimitadores especificados en la configuración del grupo de informes, a menos que se especifique una anulación de delimitador en el XDM. Consulte las variables de [lista](/help/implement/vars/page-vars/list.md) para obtener más información. |
 | **Fin de la vida útil para Data Workbench** | 14 de septiembre de 2022 | Adobe tiene planeado el fin de la vida útil de Data Workbench con fecha de aplicación el **31 de diciembre de 2023**. Póngase en contacto con su representante del Servicio de atención al cliente para ver soluciones alternativas a Data Workbench o si tiene alguna pregunta. |
 | **Actualización de las búsquedas de dispositivos debido a las sugerencias del cliente de Google** | 19 de agosto de 2022 | A partir del **26 de octubre de 2022**, Adobe empezará a utilizar sugerencias del cliente, además del agente de usuario, al obtener determinada información de los dispositivos para las visitas procedentes de exploradores Chromium, como Google Chrome y Microsoft Edge. Esto es en respuesta al plan de Google de reducir gradualmente la información presentada desde la cadena del agente de usuario en lugar de los datos pasados a través de sugerencias del cliente. Lea más información acerca de las sugerencias del cliente [aquí](https://web.dev/user-agent-client-hints/).<p> Para octubre, las bibliotecas de recopilación AppMeasurement y SDK web admitirán recopilar sugerencias de cliente y configurar si se recopilan sugerencias de cliente de alta entropía. Como parte de este cambio, Adobe utilizará Device Atlas para todas las búsquedas de dispositivos relacionadas con el agente de usuario. Actualmente, Device Atlas solo se utiliza para visitas de dispositivos móviles. Estas actualizaciones pueden provocar pequeños cambios en la información del dispositivo derivada históricamente del agente de usuario, específicamente del explorador, el tipo de explorador, el sistema operativo, el tipo de sistema operativo y el dispositivo móvil. [Más información](/help/technotes/client-hints.md) |
@@ -107,8 +107,8 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.
 
 | Función | Descripción | [Fecha objetivo](releases.md) |
 | ----------- | ---------- | ------- |
-| Compatibilidad con variables de lista en XDM para la recopilación de Edge | Permite a los clientes recopilar datos mediante el SDK web/Edge de Experience para utilizar XDM y especificar el contenido de la variable de lista. [Más información](https://experienceleague.adobe.com/docs/analytics/implementation/vars/page-vars/list.html?lang=es#list-variables-using-the-web-sdk) | 18 de agosto de 2022 |
-| Uso del campo SKU en XDM para la recopilación de Edge al configurar variables de cadena de producto | Permite a los clientes recopilar datos a través del SDK web/Edge de Experience Cloud para utilizar el valor SKU y establecer el campo de producto en la variable de productos. [Más información](https://experienceleague.adobe.com/docs/analytics/implementation/vars/page-vars/products.html?lang=es#products-using-the-web-sdk) | 18 de agosto de 2022 |
+| Compatibilidad con variables de lista en XDM para la recopilación de Edge | Permite a los clientes recopilar datos mediante el SDK web utilizar XDM para especificar el contenido de la variable de lista. [Más información](https://experienceleague.adobe.com/docs/analytics/implementation/vars/page-vars/list.html?lang=es#list-variables-using-the-web-sdk) | 18 de agosto de 2022 |
+| Uso del campo SKU en XDM para la recopilación de Edge al configurar variables de cadena de producto | Permite a los clientes recopilar datos mediante el SDK web utilizar el valor SKU para establecer el campo de producto en la variable de productos. [Más información](https://experienceleague.adobe.com/docs/analytics/implementation/vars/page-vars/products.html?lang=es#products-using-the-web-sdk) | 18 de agosto de 2022 |
 
 {style="table-layout:auto"}
 
@@ -138,7 +138,7 @@ AN-274281; AN-280956; AN-285670; AN-288176; AN-289221; AN-289665; AN-289768; AN-
 
 | Función | Descripción | [Fecha objetivo](releases.md) |
 | ----------- | ---------- | ------- |
-| Compatibilidad con variables de comercialización en XDM para la recopilación de Edge | Permite a los clientes que recopilan datos mediante el SDK web/Experience Edge utilizar XDM para especificar los distintos valores de las variables de comercialización (eVars). [Más información](https://experienceleague.adobe.com/docs/analytics/implementation/vars/page-vars/evar-merchandising.html?lang=es) | 29 de junio de 2022 |
+| Compatibilidad con variables de comercialización en XDM para la recopilación de Edge | Permite a los clientes recopilar datos con el SDK web utilizar XDM para especificar los distintos valores de las variables de comercialización (eVars). [Más información](https://experienceleague.adobe.com/docs/analytics/implementation/vars/page-vars/evar-merchandising.html?lang=es) | 29 de junio de 2022 |
 
 {style="table-layout:auto"}
 
@@ -170,8 +170,8 @@ AN-280192; AN-281628; AN-287022; AN-287104; AN-287876; AN-288802; AN-288457; AN-
 | ----------- | ---------- | ------- |
 | **Nueva interfaz de usuario de visualización de flujo** | Proporciona funcionalidad adicional a nuestra visualización de flujo para hacerla más potente y capaz. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/flow/create-flow.html?lang=es) | El despliegue comienza el 15 de junio de 2022; GA antes del 27 o 28 de junio de 2022 |
 | **Compartir anotaciones en informes de valoración de Mobile** | Puede mostrar anotaciones creadas en Workspace en informes de valoración móviles. Esto le permite compartir matices de datos contextuales y perspectivas sobre su organización y campañas directamente en proyectos de cuadros de resultados móviles, visibles en la aplicación móvil de paneles de Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/components/annotations/mobile-annotations.html?lang=es) | 15 de junio de 2022 |
-| **Compatibilidad con la versión de sintaxis del producto de Variables de comercialización con la colección Edge** | Ahora puede establecer variables de comercialización utilizando el equivalente de la sintaxis del producto estableciendo los campos XDM relevantes. Consulte [variable de productos](../implement/vars/page-vars/products.md) para obtener más información, sintaxis del SDK web con la variable `products` y [Asignación de variables de Analytics en Adobe Experience Edge](../implement/aep-edge/variable-mapping.md) para obtener una lista completa de las variables disponibles. | 15 de junio de 2022 |
-| **Rellenado de dimensiones y métricas de Ciclo vital mediante Experience Edge** | Los datos del Ciclo de vida móvil enviados mediante Experience Edge ahora aparecerán en los informes de Analytics. Consulte la documentación para obtener detalles sobre qué campos XDM se asignan a los informes de ciclo de vida móviles existentes. [Más información](https://experienceleague.adobe.com/docs/analytics/implementation/aep-edge/variable-mapping.html?lang=es) | 27 de mayo de 2022 |
+| **Compatibilidad con la versión de sintaxis del producto de Variables de comercialización con la red de Edge** | Ahora puede establecer variables de comercialización utilizando el equivalente de la sintaxis del producto estableciendo los campos XDM relevantes. Consulte la [`products`](../implement/vars/page-vars/products.md) para obtener más información. | 15 de junio de 2022 |
+| **Rellenar dimensiones y métricas de Ciclo vital a través de Adobe Experience Platform Edge Network** | Los datos del Ciclo de vida móvil enviados a Edge Network ahora aparecen en los informes de Analytics. Consulte [Asignación de variables XDM](../implement/aep-edge/variable-mapping.md) para obtener más información. | 27 de mayo de 2022 |
 | **Reglas de procesamiento de Mobile Services disponibles en las reglas de procesamiento de Analytics** | La fecha de finalización de la vida útil de Adobe Mobile Services es el 31 de diciembre de 2022. Las reglas de procesamiento existentes creadas o generadas por Adobe Mobile Services migrarán automáticamente a las reglas de procesamiento de Adobe Analytics, donde puede editarlas y administrarlas. Se pueden ver, pero ya no se pueden editar en Mobile Services hasta que se acabe el producto. Póngase en contacto con el Servicio de atención al cliente de Adobe si tiene preguntas o necesita asistencia. | 15 de junio de 2022 |
 | **Conjuntos de clasificaciones: Fase 1** | Esta versión por fases de una nueva experiencia de usuario de clasificaciones mejora significativamente la visibilidad de los datos de clasificación de propiedad del cliente. Consulte [Conjuntos de clasificaciones](../components/classifications/sets/overview.md) para obtener más información. | Las pruebas limitadas comienzan el 15 de junio de 2022, según las estimaciones de disponibilidad general a principios de 2023 |
 
@@ -198,7 +198,7 @@ AN-251686; AN-283542; AN-286572; AN-286945; AN-286784; AN-286944; AN-287012; AN-
 
 | Función | Descripción | [Fecha objetivo](releases.md) |
 | ----------- | ---------- | ------- |
-| Rellenado de dimensiones y métricas de Ciclo vital mediante Experience Edge | Los datos del Ciclo de vida móvil enviados mediante Experience Edge ahora aparecerán en los informes de Analytics. Consulte la documentación para obtener detalles sobre qué datos del Ciclo vital se recopilan mediante Experience Edge y cómo corresponde esto a los informes del Ciclo vital existentes. [Más información](https://experienceleague.adobe.com/docs/analytics/implementation/aep-edge/variable-mapping.html?lang=es) | 27 de mayo de 2022 |
+| **Rellenar dimensiones y métricas de Ciclo vital a través de Adobe Experience Platform Edge Network** | Los datos del Ciclo de vida móvil enviados a Edge Network ahora aparecen en los informes de Analytics. Consulte [Asignación de variables XDM](../implement/aep-edge/variable-mapping.md) para obtener más información. | 27 de mayo de 2022 |
 
 {style="table-layout:auto"}
 
@@ -214,7 +214,7 @@ AN-274429; AN-279640; AN-280918; AN-280945; AN-282884; AN-283565; AN-284785; AN-
 | ----------- | ---------- | ---------- |
 | **Actualización de SFTP** | 9 de mayo de 2022 | Anteriormente, habíamos comunicado que Adobe actualizaría sus servicios de Protocolo seguro de transferencia de archivos (SFTP) en mayo de 2022 para proporcionar una seguridad mejorada para la transferencia de archivos. Hemos pospuesto esta actualización hasta el verano de 2022. Cuando se realice este cambio, ya no se admitirán determinadas configuraciones del cliente SFTP. Esto solo afecta a los datos enviados o recuperados de Adobe Analytics mediante SFTP. El protocolo FTP no se ve afectado. Para evitar interrupciones en el servicio, asegúrese de que sus clientes SFTP (código, herramientas y servicios) estén de acuerdo con los cambios detallados [aquí](https://experienceleague.adobe.com/docs/analytics/export/ftp-and-sftp/secure-file-transfer-protocol/sftp-upgrade.html?lang=es). |
 | **Derechos de Análisis entre dispositivos (CDA)** | 13 de abril de 2022 | A partir del **1 de mayo de 2022**, cualquier nueva implementación de [CDA](/help/components/cda/overview.md) se limitará a un máximo de tres ID de grupo de informes (RSID) por cliente. |
-| **Cambio del modo en que Adobe Analytics gestiona los datos de A4T recopilados mediante Experience Edge** | 31 de marzo de 2022 | El 7 de marzo de 2022, Analytics cambió la forma en que gestiona algunas llamadas procedentes de Experience Edge que incluyen contenido de Target destinado a la creación de informes en Analytics for Target (A4T). A partir del 7 de marzo, todas las visitas con contenido de creación de informes de A4T se modificaron para que no se trataran como eventos de vista de página o de vínculo. A partir del **31 de marzo de 2022**, la lógica es más selectiva, de modo que los eventos estándar de vista de página y clics no se modifiquen. En adelante, los únicos eventos que se modifican son las llamadas de solo personalización que únicamente tengan contenido de A4T. |
+| **Cambio del modo en que Adobe Analytics gestiona los datos de A4T recopilados mediante Adobe Experience Platform Edge Network** | 31 de marzo de 2022 | El 7 de marzo de 2022, Analytics cambió su forma de gestionar algunas llamadas procedentes de la red perimetral que incluye contenido de Target destinado a la creación de informes en Analytics for Target (A4T). A partir del 7 de marzo, todas las visitas con contenido de creación de informes de A4T se modificaron para que no se trataran como una vista de página o un evento de vínculo. Inicio **31 de marzo de 2022** Sin embargo, la lógica es más selectiva, de modo que los eventos estándar de vista de página y de vínculo no se modifiquen. En adelante, los únicos eventos que se modifican son las llamadas de solo personalización que únicamente tengan contenido de A4T. |
 | **Actualización de los métodos de cifrado del explorador admitidos para determinados clientes** | 28 de marzo de 2022 | Adobe ofrece dos niveles de seguridad de cifrado para satisfacer las distintas necesidades de seguridad de los clientes en la recopilación de datos de origen. El **23 de junio de 2022** se eliminará la compatibilidad con ciertos algoritmos de codificación HTTPS, conocidos como cifrados, para clientes con su nivel de seguridad establecido en “Alto”. Esta acción significa que algunos sistemas operativos antiguos ya no podrán enviar datos a Analytics porque no son compatibles con los métodos de cifrado modernos. Los clientes que utilicen la configuración predeterminada de seguridad de cifrado “Estándar” no se ven afectados. Ya se ha contactado directamente con todos los clientes que actualmente usan la configuración “Alta”. Aquí puede encontrar una lista detallada de las cifras afectadas por este cambio. |
 | **Pausa de informes programados antiguos** | 12 de abril de 2022 | A partir del **20 de abril de 2022**, Adobe tiene la intención de poner en pausa todos los informes programados que tengan una fecha de creación mayor de dos años (creados antes del 31 de enero de 2020). No se eliminan informes ni datos. Solo los informes identificados como anteriores a dos años se pausan y no se envían informes programados adicionales. Más información |
 | **Actualizaciones de región ISO 2022** | 11 de marzo de 2021 | Adobe planea llevar a cabo actualizaciones de la zona ISO 2022 el **10 de junio de 2022**. Es de esperar que se produzcan pequeñas actualizaciones de la información geográfica tras este lanzamiento. |
@@ -251,7 +251,7 @@ AN-274486; AN-279258; AN-279995; AN-280918; AN-281423; AN-282084; AN-282435; AN-
 | ----------- | ---------- | ---------- |
 | **Actualización de SFTP** | 9 de mayo de 2022 | Anteriormente, habíamos comunicado que Adobe actualizaría sus servicios de Protocolo seguro de transferencia de archivos (SFTP) en mayo de 2022 para proporcionar una seguridad mejorada para la transferencia de archivos. Hemos pospuesto esta actualización hasta el verano de 2022. Cuando se realice este cambio, ya no se admitirán determinadas configuraciones del cliente SFTP. Esto solo afecta a los datos enviados o recuperados de Adobe Analytics mediante SFTP. El protocolo FTP no se ve afectado. Para evitar interrupciones en el servicio, asegúrese de que sus clientes SFTP (código, herramientas y servicios) estén de acuerdo con los cambios detallados [aquí](https://experienceleague.adobe.com/docs/analytics/export/ftp-and-sftp/secure-file-transfer-protocol/sftp-upgrade.html?lang=es). |
 | **Derechos de Análisis entre dispositivos (CDA)** | 13 de abril de 2022 | A partir del **1 de mayo de 2022**, cualquier nueva implementación de [CDA](/help/components/cda/overview.md) se limitará a un máximo de tres ID de grupo de informes (RSID) por cliente. |
-| **Cambio del modo en que Adobe Analytics gestiona los datos de A4T recopilados mediante Experience Edge** | 31 de marzo de 2022 | El 7 de marzo de 2022, Analytics cambió la forma en que gestiona algunas llamadas procedentes de Experience Edge que incluyen contenido de Target destinado a la creación de informes en Analytics for Target (A4T). A partir del 7 de marzo, todas las visitas con contenido de creación de informes de A4T se modificaron para que no se trataran como eventos de vista de página o de vínculo. A partir del **31 de marzo de 2022**, la lógica es más selectiva, de modo que los eventos estándar de vista de página y clics no se modifiquen. En adelante, los únicos eventos que se modifican son las llamadas de solo personalización que únicamente tengan contenido de A4T. |
+| **Cambio del modo en que Adobe Analytics gestiona los datos de A4T recopilados mediante Adobe Experience Platform Edge Network** | 31 de marzo de 2022 | El 7 de marzo de 2022, Analytics cambió su forma de gestionar algunas llamadas procedentes de la red perimetral que incluye contenido de Target destinado a la creación de informes en Analytics for Target (A4T). A partir del 7 de marzo, todas las visitas con contenido de creación de informes de A4T se modificaron para que no se trataran como una vista de página o un evento de vínculo. Inicio **31 de marzo de 2022** Sin embargo, la lógica es más selectiva, de modo que los eventos estándar de vista de página y de vínculo no se modifiquen. En adelante, los únicos eventos que se modifican son las llamadas de solo personalización que únicamente tengan contenido de A4T. |
 | **Actualización de los métodos de cifrado del explorador admitidos para determinados clientes** | 28 de marzo de 2022 | Adobe ofrece dos niveles de seguridad de cifrado para satisfacer las distintas necesidades de seguridad de los clientes en la recopilación de datos de origen. El **23 de junio de 2022** se eliminará la compatibilidad con ciertos algoritmos de codificación HTTPS, conocidos como cifrados, para clientes con su nivel de seguridad establecido en “Alto”. Esta acción significa que algunos sistemas operativos antiguos ya no podrán enviar datos a Analytics porque no son compatibles con los métodos de cifrado modernos. Los clientes que utilicen la configuración predeterminada de seguridad de cifrado “Estándar” no se ven afectados. Ya se ha contactado directamente con todos los clientes que actualmente usan la configuración “Alta”. Aquí puede encontrar una lista detallada de las cifras afectadas por este cambio. |
 | **Pausa de informes programados antiguos** | 12 de abril de 2022 | A partir del **20 de abril de 2022**, Adobe tiene la intención de poner en pausa todos los informes programados que tengan una fecha de creación mayor de dos años (creados antes del 31 de enero de 2020). No se eliminan informes ni datos. Solo los informes identificados como anteriores a dos años se pausan y no se envían informes programados adicionales. Más información |
 | **Actualizaciones de región ISO 2022** | 11 de marzo de 2021 | Adobe planea llevar a cabo actualizaciones de la zona ISO 2022 el **10 de junio de 2022**. Es de esperar que se produzcan pequeñas actualizaciones de la información geográfica tras este lanzamiento. |
@@ -324,11 +324,11 @@ AN-268093, AN-273820, AN-274435, AN-274904, AN-275356, AN-275947, AN-276160, AN-
 | ----------- | ---------- | ---------- |
 | Informes programados anteriores en pausa | 11 de marzo de 2022 | A partir del **15 de abril de 2022**, Adobe tiene la intención de poner en pausa todos los informes programados que tengan una fecha de creación mayor de dos años (creados antes del 31 de enero de 2020). No se eliminarán informes o datos. Solo los informes identificados como anteriores a dos años se pausarán y no se enviarán informes programados adicionales. |
 | Actualizaciones de región ISO 2022 | 11 de marzo de 2021 | Adobe realizará actualizaciones de la zona ISO 2022 el **10 de junio de 2022**. Es de esperar que solo se produzcan actualizaciones menores después de este lanzamiento. |
-| Cambio del modo en que Analytics gestiona los datos de A4T recopilados mediante Experience Edge | 25 de febrero de 2022 | Activado el **7 de marzo de 2022**, cambiaremos la forma en que administramos algunos datos relacionados con Target enviados a Adobe Analytics a través de Experience Edge. Al utilizar el SDK web de Adobe Experience Platform con Analytics y Target, se contabilizaban algunos eventos de personalización en [!DNL Adobe Analytics] como [!UICONTROL Vistas de páginas]. Esto condujo a recuentos de vistas de páginas inflados y llamadas al servidor adicionales. Con el cambio, se ignorarán las llamadas de personalización sin contenido de Analytics. Las llamadas de personalización con datos de A4T registrarán los datos de A4T, pero no se registrarán como llamadas al servidor facturables, ni afectarán a las vistas de página ni a las métricas de eventos de vínculo. |
-| Pausa de tareas de Report Builder programadas más antiguas | 24 de febrero de 2022 | **A partir del 15 de abril de 2022**, Adobe tiene la intención de poner en pausa todas las tareas de Report Builder programadas que se crearon hace más de dos años. En concreto, esta pausa se aplica a cualquier tarea creada antes del 31 de enero de 2020. No se eliminarán tareas, libros ni datos. Sin embargo, las tareas identificadas como anteriores a dos años se pausarán y no se enviarán tareas programadas adicionales. [Más información](/help/analyze/report-builder/r-arb-scheduled-reports.md) |
-| Caducidad de la extensión EOL de la inclusión en la lista de permitidos para integraciones heredadas de Analytics OAuth/JWT | 14 de enero de 2022 | El **25 de mayo de 2022**, la extensión de lista de permitidos de [API de Analytics 1.3, API de SOAP 1.4 y EOL de OAuth/JWT de Analytics heredado](https://github.com/AdobeDocs/analytics-1.4-apis/blob/master/docs/APIEOL.md) caducará. Se ofreció para proporcionar a los clientes que usan las credenciales de OAuth/JWT de [!DNL Adobe Analytics] más tiempo para migrar sus integraciones de cliente a las [credenciales de IMS de Adobe](https://developer.adobe.com/console). Esta caducidad afecta a clientes [!DNL Adobe Analytics Livestream] y [!DNL Adobe Campaign] (entre otros) que no hayan completado las migraciones de IMS requeridas. Clientes que actualmente utilizan las credenciales de la versión heredada [!DNL Analytics] OAuth/JWT a través de la extensión de la lista de permitidos y que no hayan completado su migración a las credenciales de IMS antes del 25 de mayo de 2022 perderán acceso a los servicios de Adobe. Los clientes de Livestream pueden consultar estas [instrucciones](https://github.com/AdobeDocs/analytics-1.4-apis/blob/master/docs/live-stream-api/getting_started.md) al migrar sus aplicaciones cliente a credenciales de IMS. [!DNL Campaign] clientes pueden ponerse en contacto con el equipo de su cuenta de Adobe para actualizar a la última versión de [!DNL Campaign]. |
-| EOL para [!DNL Reports & Analytics] | 4 de enero de 2022 | A partir del **31 de diciembre de 2023**, Adobe tiene la intención de descatalogar [!DNL Reports & Analytics] y sus informes y funciones correspondientes. Los informes, las visualizaciones y la tecnología subyacente que alimentan [!DNL Reports & Analytics] ya no cumplen los estándares tecnológicos de Adobe. La mayoría de las funciones de [!DNL Reports & Analytics] están disponibles en [Analysis Workspace](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/home.html?lang=es). Desde el lanzamiento de Analysis Workspace en 2015, las funcionalidades y capacidades de [!DNL Reports & Analytics] se han trasladado a Analysis Workspace y se ha alcanzado un umbral de paridad de flujo de trabajo. [Este aviso](https://spark.adobe.com/page/6WnF8JK6IRDhf/) explica el proceso de finalización de la vida útil. |
-| Actualización de servicios del Protocolo seguro de transferencia de archivos (SFTP) | 3 de marzo de 2022 | El **15 de mayo de 2022**, [!DNL Adobe Analytics] actualizará sus servicios de Protocolo seguro de transferencia de archivos (SFTP) para proporcionar una seguridad mejorada para las transferencias de archivos. Con este cambio, algunas configuraciones de cliente SFTP ya no serán compatibles. También añadiremos algunas opciones de conexión que estarán disponibles el **1 de marzo de 2022**. Esto solo afecta a los datos enviados o recuperados de Adobe Analytics mediante SFTP. El protocolo FTP no se ve afectado. Para evitar interrupciones en el servicio, asegúrese de que sus clientes SFTP (código, herramientas y servicios) estén de acuerdo con los cambios detallados [aquí](https://experienceleague.adobe.com/docs/analytics/export/ftp-and-sftp/secure-file-transfer-protocol/sftp-upgrade.html?lang=es). |
+| **Cambia el modo en que Analytics gestiona los datos de A4T recopilados mediante Adobe Experience Platform Edge Network** | 25 de febrero de 2022 | Activado **7 de marzo de 2022**, el Adobe tiene previsto cambiar la forma en que se gestionan algunos datos relacionados con Target enviados a Adobe Analytics mediante la red perimetral. Al utilizar el SDK web de Adobe Experience Platform con Analytics y Target, algunos eventos de personalización se contaban en Adobe Analytics como [!UICONTROL vistas de página]. Este método de contabilización condujo a recuentos de vistas de página inflados y llamadas al servidor adicionales. Con este cambio, se ignoran las llamadas de personalización que no contienen contenido de Analytics. Las llamadas de personalización con datos de A4T registran los datos de A4T, pero no se contabilizan como llamadas al servidor facturables, ni afectan a las vistas de página ni a las métricas de eventos de vínculo. |
+| **Pausa de tareas de Report Builder programadas más antiguas** | 24 de febrero de 2022 | **A partir del 15 de abril de 2022**, Adobe tiene la intención de poner en pausa todas las tareas de Report Builder programadas que se crearon hace más de dos años. En concreto, esta pausa se aplica a cualquier tarea creada antes del 31 de enero de 2020. No se eliminarán tareas, libros ni datos. Sin embargo, las tareas identificadas como anteriores a dos años se pausarán y no se enviarán tareas programadas adicionales. [Más información](/help/analyze/report-builder/r-arb-scheduled-reports.md) |
+| **Caducidad de la extensión EOL de la inclusión en la lista de permitidos para integraciones heredadas de Analytics OAuth/JWT** | 14 de enero de 2022 | El **25 de mayo de 2022**, la extensión de lista de permitidos de [API de Analytics 1.3, API de SOAP 1.4 y EOL de OAuth/JWT de Analytics heredado](https://github.com/AdobeDocs/analytics-1.4-apis/blob/master/docs/APIEOL.md) caducará. Se ofreció para proporcionar a los clientes que usan las credenciales de OAuth/JWT de [!DNL Adobe Analytics] más tiempo para migrar sus integraciones de cliente a las [credenciales de IMS de Adobe](https://developer.adobe.com/console). Esta caducidad afecta a clientes [!DNL Adobe Analytics Livestream] y [!DNL Adobe Campaign] (entre otros) que no hayan completado las migraciones de IMS requeridas. Clientes que actualmente utilizan las credenciales de la versión heredada [!DNL Analytics] OAuth/JWT a través de la extensión de la lista de permitidos y que no hayan completado su migración a las credenciales de IMS antes del 25 de mayo de 2022 perderán acceso a los servicios de Adobe. Los clientes de Livestream pueden consultar estas [instrucciones](https://github.com/AdobeDocs/analytics-1.4-apis/blob/master/docs/live-stream-api/getting_started.md) al migrar sus aplicaciones cliente a credenciales de IMS. [!DNL Campaign] clientes pueden ponerse en contacto con el equipo de su cuenta de Adobe para actualizar a la última versión de [!DNL Campaign]. |
+| **EOL para Reports &amp; Analytics** | 4 de enero de 2022 | A partir del **31 de diciembre de 2023**, Adobe tiene la intención de descatalogar [!DNL Reports & Analytics] y sus informes y funciones correspondientes. Los informes, las visualizaciones y la tecnología subyacente que alimentan [!DNL Reports & Analytics] ya no cumplen los estándares tecnológicos de Adobe. La mayoría de las funciones de [!DNL Reports & Analytics] están disponibles en [Analysis Workspace](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/home.html?lang=es). Desde el lanzamiento de Analysis Workspace en 2015, las funcionalidades y capacidades de [!DNL Reports & Analytics] se han trasladado a Analysis Workspace y se ha alcanzado un umbral de paridad de flujo de trabajo. [Este aviso](https://spark.adobe.com/page/6WnF8JK6IRDhf/) explica el proceso de finalización de la vida útil. |
+| **Actualización de servicios del Protocolo seguro de transferencia de archivos (SFTP)** | 3 de marzo de 2022 | El **15 de mayo de 2022**, [!DNL Adobe Analytics] actualizará sus servicios de Protocolo seguro de transferencia de archivos (SFTP) para proporcionar una seguridad mejorada para las transferencias de archivos. Con este cambio, algunas configuraciones de cliente SFTP ya no serán compatibles. También añadiremos algunas opciones de conexión que estarán disponibles el **1 de marzo de 2022**. Esto solo afecta a los datos enviados o recuperados de Adobe Analytics mediante SFTP. El protocolo FTP no se ve afectado. Para evitar interrupciones en el servicio, asegúrese de que sus clientes SFTP (código, herramientas y servicios) estén de acuerdo con los cambios detallados [aquí](https://experienceleague.adobe.com/docs/analytics/export/ftp-and-sftp/secure-file-transfer-protocol/sftp-upgrade.html?lang=es). |
 
 ### AppMeasurement
 
