--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -4,10 +4,10 @@ description: Notas de la versión de Analytics de 2023
 feature: Release Notes
 mini-toc-levels: 2
 exl-id: c0d91643-2f2a-4877-b421-cfd42259d4a4
-source-git-commit: 99156dd9d898ce0abf214561cb0040c647d7e6ab
-workflow-type: ht
-source-wordcount: '11572'
-ht-degree: 100%
+source-git-commit: 914b822aae659d1d0f0b8a98480090ead99e102a
+workflow-type: tm+mt
+source-wordcount: '11592'
+ht-degree: 98%
 
 ---
 
@@ -42,7 +42,7 @@ AN-313983; AN-324189; AN-325095; AN-325677; AN-325886; AN-326068; AN-326360; AN-
 
 | Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
-| **Confusión de IP completa para visitas de Adobe Experience Edge** | 27 de septiembre de 2023 | La confusión de IP para visitas procedentes de Experience Edge se actualizará más adelante en octubre de 2023. En abril, Experience Edge añadió la capacidad de proteger direcciones IP. En ese momento, Adobe Analytics solo admitía la ofuscación parcial de direcciones IP, debido a la forma en que Analytics procesa las visitas de Experience Edge. Cuando los clientes eligieron la ofuscación completa para Experience Edge, Analytics solo recibía direcciones IP parcialmente ofuscadas. Cuando se implemente este cambio, Analytics recibirá la IP totalmente oculta. |
+| **Confusión de IP completa para Adobe Experience Platform Edge Network** | 27 de septiembre de 2023 | El Adobe planea actualizar la confusión de IP para las visitas procedentes de la red perimetral en octubre de 2023. En abril pasado, la red perimetral agregó la capacidad de proteger las direcciones IP. En ese momento, Adobe Analytics solo admitía la ofuscación parcial de direcciones IP, debido a la forma en que Analytics procesa las visitas de la red perimetral. Cuando los clientes eligieron la ofuscación completa para la red perimetral, Analytics solo recibía direcciones IP parcialmente ofuscadas. Cuando se implementa este cambio, Analytics recibe la IP totalmente oculta. |
 | **Adobe Analytics Livestream: API de Analytics 2.0** | 27 de septiembre de 2023 | Los clientes ahora pueden acceder a [Guía de punto final de Adobe Analytics Livestream](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/livestream/) en las API de Adobe Analytics 2.0 en lugar de en su ubicación anterior, con las API 1.4. Observe que los clientes que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de Adobe I/O OAuth de forma predeterminada el 1 de enero de 2025. (Consulte los detalles en los avisos de fin de la vida útil más abajo). |
 
 {style="table-layout:auto"}
@@ -107,7 +107,7 @@ AN-315605; AN-316306; AN-317494; AN-317844; AN-320424; AN-320597; AN-320680; AN-
 
 | Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
-| **Compatibilidad con la recepción de direcciones IP ocultas** | 27 de septiembre de 2023 | Se actualizará la ofuscación de IP para las visitas procedentes de Experience Edge. En abril de 2023, Experience Edge añadió la capacidad de proteger direcciones IP. En ese momento, Adobe Analytics solo admitía la ofuscación parcial de direcciones IP, debido a la forma en que Analytics procesa las visitas de Experience Edge. Cuando los clientes eligieron la ofuscación completa para Experience Edge, Analytics solo recibía direcciones IP parcialmente ofuscadas. Con este cambio, Analytics recibirá ahora la IP totalmente oculta. |
+| **Compatibilidad con la recepción de direcciones IP ocultas** | 27 de septiembre de 2023 | Adobe planea actualizar la confusión de IP para las visitas procedentes de Adobe Experience Platform Edge Network. En abril de 2023, la red perimetral agregó la capacidad de proteger las direcciones IP. En ese momento, Adobe Analytics solo admitía la ofuscación parcial de direcciones IP, debido a la forma en que Analytics procesa las visitas de la red perimetral. Cuando los clientes eligieron la ofuscación completa para la red perimetral, Analytics solo recibía direcciones IP parcialmente ofuscadas. Con este cambio, Analytics ahora recibe la IP totalmente oculta. |
 | **Caducidad de 37 meses de los ID de compra y los ID de evento (serialización de eventos)** | 10 de julio de 2023 | Una próxima versión del motor de procesamiento de visitas de Analytics, prevista para su lanzamiento el **13 de julio de 2023**, empezará a aplicar una caducidad de 37 meses para los ID de compra y los ID de evento (serialización de eventos). Actualmente, los ID de compra y los ID de evento nunca caducan en Adobe Analytics. Una vez que se veía/utilizaba un ID de compra o ID de evento, cualquier visita futura, sin importar cuándo, tenía esa compra o evento marcado como duplicado. Con la nueva versión del motor de procesamiento:<ul><li>Los ID de compra y los ID de evento siempre caducan pasados 37 meses.</li><li>Si han pasado 37 meses desde que se vio el ID de compra o el ID de evento, ya no se considera una compra o evento duplicado.</li><li> Si está &quot;reutilizando&quot; los ID de compra o ID de evento de hace más de 37 meses, ya no se consideran duplicados.</li></ul> |
 | **Migración a las credenciales de servidor a servidor de Adobe I/O OAuth** | 11 de mayo de 2023 | Los clientes de la API de Adobe Analytics y Livestream que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de Adobe I/O OAuth de forma predeterminada el **1 de enero de 2025**. Para obtener más información y cronologías, consulte el aviso de fin de vida útil en la tabla siguiente. |
 
@@ -202,7 +202,7 @@ AN-311878; AN-313968; AN-314130; AN-315701; AN-315761; AN-316613; AN-317563; AN-
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
 | ----------- | ---------- | ------- | ---- |
 | **Relleno para zonas protegidas que no sean de producción** | Al crear un flujo de datos del conector de origen de Analytics en una zona protegida que no sea de producción, el relleno de las zonas protegidas que no sean de producción estará limitado a 3 meses. Permanecerá a los 13 meses para las zonas protegidas de producción. | N/A | 26 de abril de 2023 |
-| **Uso compartido de vínculos para proyectos (no se requiere inicio de sesión)** | Ahora puede compartir vínculos de solo lectura a proyectos de Analysis Workspace con personas que no tienen acceso a Adobe Analytics. Esto incluye compartir con personas fuera de su organización o con personas de su organización que no estén aprovisionadas para Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/share-projects.html?lang=es#share-public-link)<p>Esta funcionalidad está habilitada de forma predeterminada y el administrador del sistema puede inhabilitarla. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/user-preferences.html?lang=es#company-preferences)</p> | 3 de mayo de 2023 | 5 de junio de 2023 |
+| **Uso compartido de vínculos para proyectos (no se requiere inicio de sesión)** | Ahora puede compartir vínculos de solo lectura a proyectos de Analysis Workspace con personas que no tienen acceso a Adobe Analytics. Esto incluye compartir con personas fuera de su organización o con personas de su organización que no estén aprovisionadas para Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/share-projects.html#share-public-link)<p>Esta funcionalidad está habilitada de forma predeterminada y el administrador del sistema puede inhabilitarla. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/user-preferences.html#company-preferences)</p> | 3 de mayo de 2023 | 5 de junio de 2023 |
 | **Pantalla de inicio actualizada para la aplicación de paneles de Analytics (aplicación móvil)** | La nueva pantalla de inicio actualizada le permite ver todos los cuadros de resultados en una lista consolidada de cuadros de resultados. Si tiene acceso a más de una organización en un inicio de sesión, todos los cuadros de resultados de sus organizaciones estarán disponibles en una sola lista. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/mobapp/executive.html?lang=es#use-dashboards) | N/A | 10 de mayo de 2023 |
 | **Ordenar componentes en Analysis Workspace** | Ahora hay disponible una nueva opción de ordenación al ver componentes en el carril izquierdo o en el diccionario de datos de Analysis Workspace. Puede ordenar los componentes por Recomendado (los más utilizados), Alfabético o Categórico (tipo).<p>Anteriormente, solo se podían buscar o filtrar componentes. [Más información](/help/analyze/analysis-workspace/components/analysis-workspace-components.md)</p> | N/A | Por determinar |
 | **Eliminación de filas que contienen dimensiones dinámicas de una tabla de forma libre** | En una tabla de forma libre de Analysis Workspace, ahora puede eliminar rápidamente filas específicas que contengan dimensiones dinámicas mediante el icono x. Al hacerlo, se aplica automáticamente una regla de filtro &quot;Excluir artículos siempre&quot;.<p>Anteriormente, la única forma de eliminar filas que contenían dimensiones dinámicas era crear manualmente una regla en el cuadro de diálogo Filtro. [Más información](/help/analyze/analysis-workspace/visualizations/freeform-table/filter-and-sort.md)</p> | N/A | 17 de mayo de 2023 |
@@ -245,9 +245,9 @@ AN-312098; AN-318309; AN-316675; AN-318173; AN-310359; AN-317613; AN-318836; AN-
 | **Relleno para zonas protegidas que no sean de producción** | Al crear un flujo de datos del conector de origen de Analytics en una zona protegida que no sea de producción, el relleno de las zonas protegidas que no sean de producción estará limitado a 3 meses. Permanecerá a los 13 meses para las zonas protegidas de producción. | N/A | 26 de abril de 2023 |
 | **Filtrado de filas y columnas para el streaming del conector de origen de Analytics** | El conector de origen de Analytics en Adobe Experience Platform ahora permite filtrar los datos de Analytics que se usan para rellenar perfiles en el [Perfil del cliente en tiempo real](https://experienceleague.adobe.com/docs/experience-platform/profile/home.html?lang=es). El filtrado de nivel de fila reduce el número de eventos asociados a perfiles. El filtrado a nivel de columna ayuda a reducir la riqueza de los propios eventos, lo que permite optimizar el uso de derechos de perfil. Este filtrado solo se aplica a los datos enviados al perfil del cliente en tiempo real y al [Servicio de identidad](https://experienceleague.adobe.com/docs/experience-platform/identity/home.html?lang=es). **El filtrado no afecta a los datos que se envían al lago de datos para su uso en aplicaciones como Customer Journey Analytics**. [Más información](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=es#filtering-for-profile) | N/A | 29 de marzo de 2023 |
 | **Compatibilidad parcial con Activity Map con el SDK web** | A partir de la versión 2.15.0 del SDK web, se empezaron a rellenar los datos de Activity Map cuando el seguimiento de vínculos está habilitado. Esto permite a los usuarios del SDK web obtener el sistema de informes de Activity Map si tienen habilitado el seguimiento de vínculos con el SDK web y Activity Map configurado en Analytics.<p>Al habilitar el seguimiento de vínculos con el SDK web, se envían eventos de vínculo cuando un cliente navega de una página a la siguiente. Se trata de un funcionamiento diferente al de AppMeasurement y puede dar lugar a que se envíen más visitas facturables a Adobe. Más información [aquí](https://experienceleague.adobe.com/docs/experience-platform/edge/data-collection/track-links.html?lang=es) y [aquí](/help/analyze/activity-map/activitymap-getting-started/activitymap-enable.md) | N/A | 31 de marzo de 2023 |
-| **Confusión de IP para Experience Edge** | Experience Edge admitirá la confusión de IP para los datos enviados directamente a Adobe Experience Platform. Esto beneficia a los clientes que envían datos directamente a Platform para su uso en Customer Journey Analytics u otras soluciones de Platform. La confusión de IP se ajusta en el nivel de flujo de datos. Admite la eliminación del último octeto o de toda la dirección IP.<p>**Nota**: La confusión NO se aplica a los datos enviados a Adobe Analytics. Analytics sigue obteniendo la IP completa. El procesamiento de IP se sigue realizando en Analytics por separado. En el futuro, planeamos permitir que los datos de Analytics se confundan en Edge. | N/A | Lanzamiento de Adobe Experience Platform el 26 de abril de 2023 |
+| **Confusión de IP para Adobe Experience Platform Edge Network** | Planes de Adobe para que la red perimetral admita la ocultación de IP para los datos enviados directamente a Adobe Experience Platform. Este cambio beneficia a los clientes que envían datos directamente a Platform para su uso en Customer Journey Analytics u otras soluciones de Platform. La confusión de IP se ajusta en el nivel de flujo de datos. Admite la eliminación del último octeto o de toda la dirección IP.<p>**Nota**: La confusión NO se aplica a los datos enviados a Adobe Analytics. Analytics sigue obteniendo la IP completa. El procesamiento de IP se sigue realizando en Analytics por separado. En el futuro, Adobe planea permitir que los datos de Analytics se confundan en el nivel de red perimetral. | N/A | Lanzamiento de Adobe Experience Platform el 26 de abril de 2023 |
 | **Diccionario de datos en Analysis Workspace** | El diccionario de datos ayuda a los usuarios y a los administradores a realizar el seguimiento de los componentes (dimensiones, métricas) en el entorno de Analytics, a administrarlos y a comprenderlos mejor. [Más información](/help/analyze/analysis-workspace/components/data-dictionary/data-dictionary-overview.md) | 15 de marzo de 2023 | 29 de marzo de 2023 |
-| **Uso compartido de vínculos para proyectos (no se requiere inicio de sesión)** | <p>Ahora puede compartir vínculos de solo lectura a proyectos de Analysis Workspace con personas que no tienen acceso a Adobe Analytics. Esto incluye compartir con personas fuera de su organización o con personas de su organización que no estén aprovisionadas para Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/share-projects.html?lang=es#share-public-link)</p> <p>Esta funcionalidad está habilitada de forma predeterminada y el administrador del sistema puede inhabilitarla. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/user-preferences.html?lang=es#company-preferences)</p> | 3 de mayo de 2023 | Junio de 2023 |
+| **Uso compartido de vínculos para proyectos (no se requiere inicio de sesión)** | <p>Ahora puede compartir vínculos de solo lectura a proyectos de Analysis Workspace con personas que no tienen acceso a Adobe Analytics. Esto incluye compartir con personas fuera de su organización o con personas de su organización que no estén aprovisionadas para Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/share-projects.html#share-public-link)</p> <p>Esta funcionalidad está habilitada de forma predeterminada y el administrador del sistema puede inhabilitarla. [Más información](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/user-preferences.html#company-preferences)</p> | 3 de mayo de 2023 | Junio de 2023 |
 | **2 nuevas guías de punto final para la API de Adobe Analytics 2.0** | <ul><li>[API de dimensiones de Analytics](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/dimensions/)</li><li>[API de métricas de Analytics](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/metrics/)</li></ul> | N/A | 10 de abril de 2023 |
 
 {style="table-layout:auto"}
@@ -332,7 +332,7 @@ AN-308177; AN-308727; AN-308846; AN-309591; AN-310614; AN-311544; AN-311570; AN-
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
 | ----------- | ---------- | ------- | ---- |
-| **Interfaz de usuario actualizada para etiquetas de privacidad de datos** | La interfaz actualizada optimiza el proceso de creación, administración y edición de etiquetas de privacidad de datos para los componentes del grupo de informes. [Más información](https://experienceleague.adobe.com/docs/analytics/admin/data-governance/data-labels/gdpr-setup-reportsuite.html?lang=es) | N/A | 8 de febrero de 2023 |
+| **Interfaz de usuario actualizada para etiquetas de privacidad de datos** | La interfaz actualizada optimiza el proceso de creación, administración y edición de etiquetas de privacidad de datos para los componentes del grupo de informes. [Más información](https://experienceleague.adobe.com/docs/analytics/admin/data-governance/data-labels/gdpr-setup-reportsuite.html) | N/A | 8 de febrero de 2023 |
 | **Ocultar intervalos de fechas de comparación en cuadros de resultados móviles** | Con los cuadros de resultados móviles, puede alternar la configuración **[!UICONTROL Incluir fechas de comparación]** para verlas u ocultarlas. | N/A | 8 de febrero de 2023 |
 | **Actualizaciones de calendario en el espacio de trabajo** | <ul><li>Fechas del panel de anclaje: puede hacer que los componentes del intervalo de fecha sean relativos al calendario del panel. [Más información](/help/analyze/analysis-workspace/components/calendar-date-ranges/calendar.md#relative-panel-dates)</li><li>Actualizaciones de estilo del calendario: los estilos de calendario de toda la IU se han actualizado para presentar un flujo de trabajo más coherente y fácil de usar.</li><li>Actualizaciones de la fórmula del calendario: si utiliza fechas relativas, todas las fórmulas del calendario reflejarán el inicio del intervalo de fecha del panel. [Más información](/help/analyze/analysis-workspace/components/calendar-date-ranges/calendar.md#formula-relative-dates)</li></ul> | N/A | 8 de febrero de 2023 |
 | **Actualizaciones del intervalo de fechas del panel** | En Workspace, hemos añadido las siguientes mejoras:<ul><li>A partir de la versión de febrero, los elementos de dimensión y las previsualizaciones de datos se basan en el intervalo de fechas del panel y no en los últimos 90 días. </li><li>Todos los elementos de dimensión enumerados se basan en datos dentro del intervalo de fechas del panel. Si un elemento de dimensión tiene datos que están fuera del intervalo de fechas, puede mostrar datos adicionales más allá de este en la parte inferior de la lista.</li><li>Las dimensiones que no tienen datos pueden mostrarse en la barra izquierda. Haga clic en mostrar más opciones para ver elementos de dimensión con datos fuera del intervalo de fechas del panel.</li><li>Las vistas previas de fechas en los generadores de segmentos y métricas calculadas se basan en el intervalo de fechas del panel, a menos que se acceda desde los administradores de componentes, que no tienen un panel asociado y siguen basándose en los últimos 90 días.</li><li>Las vistas previas de datos muestran datos o componentes basados en el intervalo de fecha del panel.</li></ul> | N/A | 8 de febrero de 2023 |
